# qtemail

./: .gitignore  AUTHORS  CMakeLists.txt  README  build-src-deb.sh  build.sh  dependencies-install.pl  dependency-install.pl  encodings-install.sh  gmail-oauth-tokens.pl  install.pl  install.sh  sb-build-src-deb.sh  usage_to_readme.pl
bashcompletion/: qtemail
data/: qtemail.desktop
debian/: changelog  control  rules
qml/: AccountView.qml  BodyView.qml  Btn.qml  BtnAbstract.qml  BtnWide.qml  ConfigView.qml  EmailListField.qml  Field.qml  FileBrowser.qml  FileListField.qml  FileSelectorField.qml  FolderView.qml  HeaderView.qml  LongField.qml  MultiLineField.qml  Notifier.qml  Scaling.qml  ScrollBar.qml  SendView.qml  SuggField.qml  ToolBarButtonDef.qml  ToolBarButtonDefList.qml  ToolBarButtons.qml  ToolBarManager.qml  ToolBarPanel.qml  ToolBarPanelAbstract.qml  ToolBarPanelColumn.qml  ToolBarPanelRow.qml  ToolButtons.qml  desktop-small.qml  desktop.qml  harmattan.qml  mobile.qml
qmlcompletionbox/: Button.qml  Filter.qml  LineEdit.qml  Main.qml  PreviewDelegate.qml  SuggBox.qml  SuggestionBox.qml  SuggestionsPreview.qml
src/: bash-complete.pl  email-gui.py  email-search.pl  email.pl  smtp-cli  smtp-oauth
src/QtEmail/: Body.pm  Cache.pm  Client.pm  Config.pm  Email.pm  Folders.pm  Shared.pm  Smtp.pm  UpdatePrint.pm  Util.pm
